// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar in date range mode should render date range view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-date-range">
  <div id="m-simple-calendar-uuid" class="m-base-calendar m-calendar__renderer">
    <nav class="m-base-calendar__header"><button aria-live="polite" type="button" class="m-base-calendar__current-month-and-year">
        m-calendar:month.march 2019
      </button>
      <div>
        <m-icon-button skin="link" icon-name="m-svg__chevron--left" class="m-base-calendar__previous">m-calendar:previous.month</m-icon-button>
        <m-icon-button skin="link" icon-name="m-svg__chevron--right" class="m-base-calendar__next">m-calendar:next.month</m-icon-button>
      </div>
    </nav>
    <div aria-live="polite" class="m-base-calendar__body m--is-max-row">
      <div class="m-base-calendar__week"><span class="m-base-calendar__weekday">m-calendar:weekday.sunday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.monday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.tuesday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.wednesday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.thursday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.friday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.saturday.short</span></div>
      <div class="m-base-calendar__days">
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>24</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>25</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>26</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>27</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>28</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>1</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>2</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>3</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>4</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>5</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>6</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>7</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>8</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>9</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>10</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>11</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>12</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>13</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content m--is-today"><span>14</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>15</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>16</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>17</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>18</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>19</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>20</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>21</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>22</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>23</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>24</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>25</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>26</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>27</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>28</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>29</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>30</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>31</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>1</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>2</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>3</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>4</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>5</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>6</span></span></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar in single date mode should render single dates view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-single-date">
  <div id="m-simple-calendar-uuid" class="m-base-calendar m-calendar__renderer">
    <nav class="m-base-calendar__header"><button aria-live="polite" type="button" class="m-base-calendar__current-month-and-year">
        m-calendar:month.march 2019
      </button>
      <div>
        <m-icon-button skin="link" icon-name="m-svg__chevron--left" class="m-base-calendar__previous">m-calendar:previous.month</m-icon-button>
        <m-icon-button skin="link" icon-name="m-svg__chevron--right" class="m-base-calendar__next">m-calendar:next.month</m-icon-button>
      </div>
    </nav>
    <div aria-live="polite" class="m-base-calendar__body m--is-max-row">
      <div class="m-base-calendar__week"><span class="m-base-calendar__weekday">m-calendar:weekday.sunday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.monday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.tuesday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.wednesday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.thursday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.friday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.saturday.short</span></div>
      <div class="m-base-calendar__days">
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>24</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>25</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>26</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>27</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>28</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>1</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>2</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>3</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>4</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>5</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>6</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>7</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>8</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>9</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>10</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>11</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>12</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>13</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content m--is-today"><span>14</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>15</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>16</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>17</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>18</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>19</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>20</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>21</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>22</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>23</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>24</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>25</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>26</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>27</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>28</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>29</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>30</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>31</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>1</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>2</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>3</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>4</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>5</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>6</span></span></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar with default values should render default view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-single-date">
  <div id="m-simple-calendar-uuid" class="m-base-calendar m-calendar__renderer">
    <nav class="m-base-calendar__header"><button aria-live="polite" type="button" class="m-base-calendar__current-month-and-year">
        m-calendar:month.march 2019
      </button>
      <div>
        <m-icon-button skin="link" icon-name="m-svg__chevron--left" class="m-base-calendar__previous">m-calendar:previous.month</m-icon-button>
        <m-icon-button skin="link" icon-name="m-svg__chevron--right" class="m-base-calendar__next">m-calendar:next.month</m-icon-button>
      </div>
    </nav>
    <div aria-live="polite" class="m-base-calendar__body m--is-max-row">
      <div class="m-base-calendar__week"><span class="m-base-calendar__weekday">m-calendar:weekday.sunday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.monday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.tuesday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.wednesday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.thursday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.friday.short</span><span class="m-base-calendar__weekday">m-calendar:weekday.saturday.short</span></div>
      <div class="m-base-calendar__days">
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>24</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>25</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>26</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>27</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>28</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>1</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>2</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>3</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>4</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>5</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>6</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>7</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>8</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>9</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>10</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>11</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>12</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>13</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content m--is-today"><span>14</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>15</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>16</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>17</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>18</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>19</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>20</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>21</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>22</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>23</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>24</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>25</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>26</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>27</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>28</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>29</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>30</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day"><span tabindex="-1" class="m-base-calendar__day-content"><span>31</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>1</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>2</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>3</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>4</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>5</span></span></div>
        <div role="button" tabindex="0" class="m-base-calendar__day m--is-other-month"><span tabindex="-1" class="m-base-calendar__day-content"><span>6</span></span></div>
      </div>
    </div>
  </div>
</div>
`;
